*** empty log message ***
SVN-Revision: 14964

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -26,7 +26,7 @@ quarantineSPR.noPendingRequest.msg=There are no Pending Quarantine Request
 mylist.label.selectLabel=Select operation to be performed on the selected specimens and click '<b>Submit</b>'
 mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
-mylist.label.orderBioSpecimen=Order BioSpecimens
+mylist.label.orderBioSpecimen=Order Biospecimens
 #Shipment Messages
 shipment.request=Request for Shipment
 shipment.create=Create New Shipment
@@ -148,7 +148,7 @@ requestdetails.label.button.done=Done
 requestdetails.tooltip.updateAllRequestStatus Apply To All
 requestdetails.tooltip.specimenTreeTooltip Specimen Tree
 requestlist.dataTabel.label.Site Distribution Site
-
+applytoall= Apply To All
 requestdetails.header=Order
 requestdetails.name=Order Details
 requestdetails.link.ViewAllConsents=View All Consents
@@ -986,6 +986,7 @@ specimenLabel=Specimen Label
 specimenfromLocation=From Location
 specimenDestContainer=Destination Container Name
 specimenLabels=Specimen Labels
+specimen.status=Status
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
