Distribution pathological case:yale's usecase
SVN-Revision: 14987

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -64,6 +64,8 @@ orderingsystem.label.block=Block
 orderingsystem.label.tissueSite=Tissue Site
 orderingsystem.label.pathologicalStatus=Pathological Status
 orderingsystem.label.caseName=SPR Accession Number
+orderingsystem.label.colprot=Collection Protocol
+errors.distribution.derivedspecimen.no.specimen No specimen selected for distribution.
 
 orderingsystem.label.defineArray=Define array
 orderingsystem.label.defineArrayName=Array Name
@@ -153,6 +155,7 @@ requestdetails.header=Order
 requestdetails.name=Order Details
 requestdetails.link.ViewAllConsents=View All Consents
 requestdetails.header.RequestedSpecimenDetails=Requested Specimen Details
+requestdetails.header.orderedSpecimenDetails=Ordered Specimen Details
 requestdetails.Requested=Requested
 requesteddetails.class.Type=Class, Type
 requesteddetails.request.specimen=Request for Specimen
