rectified the spelling for token @@DATABASE_PASSWORD@@.
SVN-Revision: 15004

--- a/DE_conf/hibernate.properties
+++ b/DE_conf/hibernate.properties
@@ -20,7 +20,7 @@ hibernate.query.substitutions true 1, false 0, yes 'Y', no 'N'
 hibernate.dialect @@DIALECT@@
 hibernate.connection.driver_class @@DRIVER@@
 hibernate.connection.username @@DATABASE_USERNAME@@
-hibernate.connection.password @@DATABSE_PASSWORD@@
+hibernate.connection.password @@DATABASE_PASSWORD@@
 hibernate.connection.url @@URL@@
 
 
