*** empty log message ***
SVN-Revision: 15010

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2006,3 +2006,4 @@ user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges
 user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
 cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
 cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
+user.roleNotFound = Access denied ! User Role details not found.
