Changes for Associating CP with Site, Fix for bug id: 8820
SVN-Revision: 15024

--- a/CaTIES_conf/caTIES.properties
+++ b/CaTIES_conf/caTIES.properties
@@ -16,6 +16,7 @@ siteInfoFilename=./caTIES_conf/sites_configuration.xml
 sectionHeaderPriorityFilename=SectionHeaderConfig.txt
 filePollerPort=3030
 collectionProtocolTitle=@@COLL_PROT_TITLE@@
+siteName=@@SITE_NAME@@
 
 # Properties for Concept Coder
 caties.coder.version=UMLS2004
