--- a/deploycaties.properties
+++ b/deploycaties.properties
@@ -23,7 +23,7 @@ bad.files.dir=
 process.file.dir=
 
 collection.protocol.title=
-
+site.name=
 
 ####################################################
 ####    Concept coder Related properties        ####
