--- a/caTissueSuite_dbunit/src/dbutil.properties
+++ b/caTissueSuite_dbunit/src/dbutil.properties
@@ -1,1 +1,1 @@
-hibernate.configuration.files = hibernate.cfg.xml, DynamicExtensionsHibernate.cfg.xml
+hibernate.configuration.files = test_hibernate.cfg.xml, test_DEHibernate.cfg.xml
