--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -582,6 +582,8 @@ errors.pi.coordinator.same=Principal Investigator cannot be coordinator of the s
 errors.participant.atLeastOneFieldRequired=At least one field is required to add a Participant
 errors.valid.data=Only alpha-numeric characters are allowed for {0}
 errors.valid.number=Only numeric values are allowed for {0}
+errors.invalid.durationinminutes=Please enter a positive integer value for {0}
+errors.invalid.gforge=Please enter a positive number for {0}
 errors.email.mismatch=The two email addresses do not match.
 errors.item.notExists={0} with given identifier does not exist.
 errors.locations.notSufficient=System can not create aliquots at this time due to insufficent number of storage locations.
@@ -606,6 +608,7 @@ errors.container.closed=This Container is closed.
 errors.capacity.greaterThan0={0} should be greater than 0.
 errors.disable.specimen=First disable Specimens.
 errors.xss.invalid={0} is invalid. It should not contain (, ), < or > character.
+errors.specimen.quantity=Invalid {0} for Specimen Type {1}
 #--Error Keys End--
 
 #--Header,Footer Keys Begin--
