Distribution :yale's usecase
SVN-Revision: 15041

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -143,7 +143,7 @@ requestdetails.tabname.label.arrayRequests=Array Request
 requestdetails.datatable.label.RequestItem=Specimen
 requestdetails.datatable.label.RequestFor=Request For
 requestdetails.datatable.label.RequestedQty=Quantity
-requestdetails.datatable.label.AvailableQty=Available Quantity
+requestdetails.datatable.label.AvailableQty=Quantity
 requestdetails.datatable.label.AssignQty=Assign Quantity
 requestdetails.datatable.label.AssignStatus=Status
 requestdetails.label.button.done=Done
