Help Page Changes
SVN-Revision: 15069

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -652,9 +652,9 @@ app.training=Training
 app.training.message=Designed to give users information about the application with the help of presentations and self paced movies.
 app.umlmodel=UML Model
 app.umlmodel.message=Diagrammatic representation of the UML model of caTissue.
-app.gforge=GForge Forum
-app.gforge.message=This is the discussion forum for posting end user queries related to application usage, deployment  and other end user requests.
-app.knowledgecenter=Knowledge Center
+app.knowledgecenterForum=Knowledge Center Forum
+app.knowledgecenterForum.message=This is the discussion forum for posting end user queries related to application usage, deployment  and other end user requests.
+app.knowledgecenter=Knowledge Center Wiki
 app.knowledgecenter.message=This provides a centralized, authoritative repository of knowledge, information, and web-based support to facilitate the deployment and ongoing development of caTissue.
 #-- Help Page Keys End--
 
