Comment is added for specifying path with UNIX like separator "/".
SVN-Revision: 15087

--- a/deploycaties.properties
+++ b/deploycaties.properties
@@ -1,7 +1,7 @@
 ####################################################
 ####  caTIES common installation properties     ####
 ####################################################
-
+#Please note that the path must be separated by Unix style path separator "/".
 #Specify path to the keystore file to run caTIES server with HTTPs
 #Note: Required only in case of HTTPs
 keystore.file.path=
