*** empty log message ***
SVN-Revision: 15131

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2010,3 +2010,4 @@ user.cannotCreateScientist = Access denied ! User does not have privilege to cre
 cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
 cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
 user.roleNotFound = Access denied ! User Role details not found.
+sc.unableToFindContainer = Unable to find Storage Container.
