--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -809,6 +809,7 @@ buttons.copy Copy
 buttons.paste Paste
 buttons.defaultSpecimenView=Specimen View
 buttons.approveUserHome=ApproveUserHome
+buttons.advanceQuery=Proceed to Advance Query
 link.Aliquot=Aliquot
 link.Derive=Derive
 link.Distribute=Distribute
@@ -1477,11 +1478,12 @@ query.operator Operator
 
 #-- ShoppingCart Keys Begin --
 shoppingCart.title=My List
-ShoppingCart.emptyCartTitle=List is empty.
+ShoppingCart.emptyCartTitle=Your List is empty.
 shoppingCart.type=Type
 shoppingCart.subType=SubType
 shoppingCart.addMessage={0} Records are added in the List.
 shoppingCart.deleteMessage={0} Records are deleted from the List.
+shoppingCart.emptyCartTitle.message=Please use the advanced query function to query for data for adding them to this list.
 #-- ShoppingCart Keys End --
 
 #-- AssignPrivileges Keys Begin --
