error messages are added for Privileges.
SVN-Revision: 15162

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1497,11 +1497,16 @@ assignPrivileges.group=Group/User
 assignPrivileges.bloodCancerProtocol=Assign Privileges 'Blood Cancer Protocol'
 assignPrivileges.privilegeDetails=Privilege Details
 assignPrivileges.site(s)=Site(s)
+assignPrivileges.privilege(s)=Privilege(s)
 assignPrivileges.collectionProtocol(s)=Collection Protocol(s)
 assignPrivileges.allCurrentAndFuture=All Current and Future
 PHI_ACCESS=PHI Access
 
-
+errors.assignPrivileges.role=Role is required.
+errors.assignPrivileges.site=Site is required.
+errors.assignPrivileges.user=User is required.
+errors.assignPrivileges.privilege=Privilege is required.
+errors.assignPrivileges.collectionProtocol=Collection Protocol is required.
 #-- AssignPrivileges Keys End --
 
 #-- Configure Result View keys Begin --
