fix for bug #9060
SVN-Revision: 15173

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2018,3 +2018,4 @@ cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privil
 cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
 user.roleNotFound = Access denied ! User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
+access.view.action.denied = Access denied ! User does not have privilege to view this information.
