--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -616,8 +616,8 @@ errors.header=
 errors.footer=
 messages.header=
 messages.footer=
-errors.prefix=<LI>
-errors.suffix=</LI>
+errors.prefix=<dt>
+errors.suffix=</dt>
 #--Header,Footer Keys End--
 
 #--Main Menu Keys Begin--
