Added messages for Shipping And Tracking
SVN-Revision: 15197

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2019,3 +2019,110 @@ cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give
 user.roleNotFound = Access denied ! User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
 access.view.action.denied = Access denied ! User does not have privilege to view this information.
+
+########################################################-- For Shipping Tracking
+#-- Keys for labels on pages
+
+shipment.details=Shipment Details
+shipemntRequest.details=Shipment Request details
+shipment.sendOn=Send On
+shipment.sendDate=Send Date
+shipment.label=Label
+shipment.barcode=Barcode
+shipment.receiverSite=Receiver's Site
+shipment.senderSite=Sender's Site
+shipment.receiver=Receiver
+shipment.sender=Sender
+shipment.senderComments=Comments
+shipment.send.time.hour=Hr
+shipment.send.time.minute=Min
+
+shipment.request.requesterSite=Requester's Site
+shipment.request.sentOn=Sent On
+shipment.request.senderComments=Sender's Comments
+
+shipment.contents=Contents
+shipment.contentsRequired=Shipment must contain either specimens or containers, or both
+shipment.contentsSpecimens=Specimens
+shipment.contentsContainers=Containers
+shipment.contentsLabelOrBarcode=Label/Barcode
+shipment.contentsNameOrBarcode=Name/Barcode
+shipment.contentsSelect=Select
+shipment.contentsSpecimenLabel=Specimen
+shipment.contentsContainerLabel=Container 
+shipment.senton=Sent on
+specimen.details=Specimen Details
+container.details=Container Details
+shipment.status=Status
+shipment.storage.location=Storage Location
+shipment.receiver.comments=Comments
+
+#-- Uncomment when in SNT
+buttons.reject=Reject  
+buttons.create.shipment=Create Shipment
+ 
+#-- Error Keys --
+errors.invalid.object.passed=<li><font color="red">Invalid object passed to bizlogic</font></li>
+errors.mail.sending.failed="<li><font color="red">Mail sending failed</font></li>
+errors.null.empty.container=<li><font color="red">Container is null or empty</font></li>
+errors.domain.object.null=<li><font color="red">object is Null.Please enter valid object.</font></li>
+errors.item.specificMessage=<li><font color="red">{0}</font></li>
+
+
+#-- Domain objects --
+domain.shipment=Shipment
+domain.shipment.request=ShipmentRequest
+
+#-- For UI screen messages --
+dashboard.requestreceived=Requests Received
+dashboard.shipmentreceived=Shipments Received
+dashboard.outgoingShipments=Outgoing Shipments
+dashboard.shipments=Shipments
+dashboard.shipmentRequests=Shipment Requests
+dashboard.requestsSent=My Requests
+requestreceived.newrequests=New Requests
+shipmentreceived.newintransit=New In Transit
+outgoingmessage=New In Transit
+listofPages= List of Pages
+dashboardCollapsed=Dashboard Collapsed
+dashboardExpanded=Dashboard expanded
+createNewShipment=Create New Shipment
+receivedShipment=Received Shipment
+searchMylist=Search > My List
+newShipmentRequest=New Shipment Request
+viewSummary=View Summary
+shipment.summary=Shipment Summary
+shipment.request.summary=Shipment Request Summary
+domain.shipment.request=ShipmentRequestdomain.shipment.request=ShipmentRequest
+createShipment.specimen.labelchoicequestion=Do you want to enter Label or Barcode
+createShipment.container.labelchoicequestion=Do you want to enter Name or Barcode
+createShipment.container.name=Name
+createShipment.specimen.label=Label
+createShipment.name=Barcode
+shipment.site=Site
+
+
+#-- Error messages
+shipmentRequest.sender.site.invalid=Sender doesnot belong to the selected site
+
+
+#-- For Dashboard
+requestsSent.shipmentRequestList.empty=No outgoing requests are in queue
+incoming.shipmentList.empty=No incoming shipments are in queue
+outgoing.shipmentList.empty=No outgoing shipments are in queue
+incoming.shipmentRequestList.empty=No incoming shipment requests are in queue
+outgoing.shipmentRequestList.empty=No outgoing shipment requests are in queue
+dashboard.recordsPerPage=Records Per Page
+buttons.viewDashboard=View Dashboard
+buttons.print=Print
+participant.registered.msg.consents = Cannot delete consents, Participant Registered
+
+user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
+user.siteIsRequired = Access denied ! Please add user to atleast one Site.
+user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
+user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
+cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
+cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
+user.roleNotFound = Access denied ! User Role details not found.
+sc.unableToFindContainer = Unable to find Storage Container.
+access.view.action.denied = Access denied ! User does not have privilege to view this information.
