Added msgs to be displayed when no Site or Storage Type has been created for Shipment Containers
SVN-Revision: 15229

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2100,10 +2100,14 @@ createShipment.container.name=Name
 createShipment.specimen.label=Label
 createShipment.name=Barcode
 shipment.site=Site
+edit.shipment=Edit Shipment
+edit.shipmentRequest=Edit Shipment Request
 
 
 #-- Error messages
 shipmentRequest.sender.site.invalid=Sender doesnot belong to the selected site
+error.shipment.inTransitSite.empty=No Site Specified for In Transit Containers
+error.shipment.storageType.empty=No Storage Type Specified for In Transit Containers
 
 
 #-- For Dashboard
@@ -2115,14 +2119,3 @@ outgoing.shipmentRequestList.empty=No outgoing shipment requests are in queue
 dashboard.recordsPerPage=Records Per Page
 buttons.viewDashboard=View Dashboard
 buttons.print=Print
-participant.registered.msg.consents = Cannot delete consents, Participant Registered
-
-user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
-user.siteIsRequired = Access denied ! Please add user to atleast one Site.
-user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
-user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
-cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
-cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
-user.roleNotFound = Access denied ! User Role details not found.
-sc.unableToFindContainer = Unable to find Storage Container.
-access.view.action.denied = Access denied ! User does not have privilege to view this information.
