*** empty log message ***
SVN-Revision: 15242

--- a/CaTissueSuite_caGrid_Service/cqls/query.properties
+++ b/CaTissueSuite_caGrid_Service/cqls/query.properties
@@ -1,13 +1,12 @@
-query1=Very Simple Query : Find all the Molecular specimens available in a \nparticular collection protocol = 'CP Prostate Cancer'
-query2=Simple Query On Base class (DOESNT WORK) Find all the specimens available \nin a particular collection protocol = 'CP Prostate Cancer'
-query3=Query on direct association : Find all Tissuespecimens which have been thawed
-query4=Query on direct associateion with multiple constraints : Find Tissuespecimens \nthat were fixed in formalin 30 minutes or less and were embedded in low melting point paraffin
-query5=Queries with negated values : Find all RNA extracts derived from \nspecimens where the tissue fixative was not formalin
-query6=Query on direct association : Find all particiapnts whose is having \nmedical record from site ='Washington University School of Medicine' 
-query7=Query on self associated Class : Find all 'Molecular' Specimen where \nParent spcimen is of type 'Fluid' where CP title like '%Prostate%'
-query8=Query with indeirect Association : Find all 'Cell' Specimen of \nMale participant and PPI ='12345'
-query9=Count queries : Count no of TissueSpecimen collected in collection protocol = 'CP Prostate Cancer'
-query10=Find all malignant prostate DNA specimens from African American \nparticipants who are on a CP with the word "Prostate" in the title
-query11=Find all breast frozen malignant tissue specimens where tissue \nreview event shows greater than 90% neoplastic cellularity
-query12=Find all Tissue specimens which have been collected by the \n'Lavage' procedure &&  that have been collected in an unacceptable quality
-query13=Find Patient for Tumor identified by needle Biopsy.
+query1=Return Molecular specimens available in a collection protocol = 'CP Prostate Cancer'
+query2=Return  Tissue specimens which have been thawed
+query3=Return Tissue specimens that were fixed in formalin 30 minutes or less and were embedded in low melting point paraffin
+query4=Return RNA extracts derived from specimens where the tissue fixative was not formalin
+query5=Return particiapnts whose is having medical record from site ='Washu' 
+query6=Return Molecular specimen where Parent spcimen is of type 'Fluid' where CP title like '%Prostate%'
+query7=Return Cell specimen of Male participant and PPI ='12345'
+query8=Return number of Tissue specimen collected in collection protocol = 'CP Prostate Cancer'
+query9=Return malignant prostate DNA specimens from African American participants who are on a CP with the word "Prostate" in the title
+query10=Return breast frozen malignant tissue specimens where tissue review event shows greater than 90% neoplastic cellularity
+query11=Return Tissue specimens which have been collected by the 'Lavage' procedure &&  that have been collected in an unacceptable quality
+query12=Return Patient for Tumor identified by needle Biopsy.
