Distribution :yale's usecase
SVN-Revision: 15270

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -97,6 +97,7 @@ errors.arrayname.required= Array Name required
 errors.arraytype.required=Array Type Required
 errors.requestedQuantity.required=Please enter appropriate requested Quantity
 errors.same.distributionSite=Specimens from multiple sites exist,you can place an order from only one site at a time.
+errors.same.collectionProtocol=SPR from multiple collection protocol exist,you can place an order from only one CP at a time.
 errors.same.distributionSite.required=Either specimen site Not Available or Specimens from multiple sites exist,you can place an order from only one site at a time.
 errors.availableQuantity.required=Specimens cannot be ordered with no available Quantity.Specimen named {0} has no Available Quantity.
 errors.specimenPosition.required=Specimens cannot be ordered with virtual storage location.Specimen named {0} is virtually located.
