--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2012,7 +2012,7 @@ participant.registered.msg.specimen = Cannot edit requirement specimen, Particip
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
 
 user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
-user.siteIsRequired = Access denied ! Please add user to atleast one Site.
+user.siteIsRequired = Access denied ! Role and / or Site is required
 user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
 user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
 cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
