Add Privilege is changed to add Privileges.Customize property is added
SVN-Revision: 15382

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -760,7 +760,7 @@ buttons.reset=Reset
 buttons.approve=Approve
 buttons.reject=Reject
 buttons.submit=Submit
-buttons.addPrivilege=Add Privilege
+buttons.addPrivileges=Add Privileges
 buttons.close=Close
 buttons.pending=Pending
 buttons.edit=Edit
@@ -1501,6 +1501,7 @@ assignPrivileges.site(s)=Site(s)
 assignPrivileges.privilege(s)=Privilege(s)
 assignPrivileges.collectionProtocol(s)=Collection Protocol(s)
 assignPrivileges.allCurrentAndFuture=All Current and Future
+assignPrivileges.customize=Customize
 PHI_ACCESS=PHI Access
 
 errors.assignPrivileges.role=Role is required.
