--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2014,6 +2014,7 @@ participant.registered.msg.consents = Cannot delete consents, Participant Regist
 
 user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
 user.siteIsRequired = Access denied ! Role and / or Site is required
+user.roleIsRequired = Role
 user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
 user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
 cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
