Fixing bug :8548: Validations on date are done.
SVN-Revision: 15438

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -244,7 +244,6 @@ query.nextButton Next
 query.defineSearchRulesFor=Define Limits For
 query.addToDataList Add to Data List
 query.export Export
-query.defineResultsViewMessage <li>Search results are displayed in a format which has the <font size\="3.0"> category hierarchy tree </font> on the left and <font size\="3.0"> attributes spreadsheet </font> on right.Here, you can choose the tree below or build your own tree.
 query.step1.defineTree Step 1.Define Tree
 query.step2.defineSpreadsheet Step 2.Define Spreadsheet
 query.buildNewTree Build New Tree
@@ -267,17 +266,16 @@ query.permissibleValues Permissible Values
 query.includeDescription Include Description
 query.text Text
 query.conceptCode Concept Code
-errors.executeQuery.genericmessage=<li><font color="red">Error occurred while executing query.Please report this problem to the Administrator.</font></li>
-errors.executeQuery.multipleRoots=<li><font color="red">Please make sure that all nodes are connected and that there is only one root node present in DAG.</font></li>
-simpleQuery.twovalues.required=<li><font color="red">Please enter two valid values for operator 'Between'.</font></li>
+errors.executeQuery.genericmessage=Error occurred while executing query.Please report this problem to the Administrator.
+errors.executeQuery.multipleRoots=Please make sure that all nodes are connected and that there is only one root node present in DAG.
+simpleQuery.twovalues.required=Please enter two valid values for operator 'Between'.
 query.date.format MM-DD-YYYY
 query.addToView Add To View
 query.chooseCategoryLable (E.g. Participant,Specimen,Collection Protocol)
-query.select.attributes.for.view.header=<li><font color="blue" face="arial" size="2">Please select the attributes for the view.</font></li>
 query.finish.button Finish
 query.back.button Cancel
 query.restoreDefault.button Restore Defaults
-query.empty.dag <li><font color\="blue" family\="arial,helvetica,verdana,sans-serif">DAG is empty.</font></li>
+query.empty.dag DAG is empty
 query.defineView.noExpression.message <li><font color\="blue" family\="arial,helvetica,verdana,sans-serif">At least one expression should be present in view.</font></li>
 query.zero.records.present <font style\='padding-left\:0.7em; font-size\:0.8em; font-family\:arial;' color\='\#0000CC' family\='arial'>Zero records found for this query.</font>
 query.tree.label.NA N/A
@@ -1543,10 +1541,10 @@ pageOfQueryResults.searchResultTitle=Search Results
 pageOfQueryModule.searchResultTitle=Search Results
 pageOfSpecimenArrayType.searchResultTitle Specimen Array Type
 pageOfSpecimenArray.searchResultTitle Specimen Array
-advanceQuery.noRecordsFound <li><font color\="red">No Records Found.</font></li>
-advanceQuery.noConditions <li><font size\="2.8" color\="red">Please select conditions for the search.</font></li>
-advanceQuery.userAlreadyLoggedIn=<li><font color="red">You are logged in to caTissue Core with the same user account from two different browsers or machines. caTissue Core does not support using Advanced search from two such sessions. Please log off from one of the session and retry the Query.</font></li>
-error.specimenId.add <li><font color\="red">Please add specimen Identifier to view to add specimen to cart.</font></li>
+advanceQuery.noRecordsFound No Records Found.</font></li>
+advanceQuery.noConditions <li><font size\="2.8" color\="red">Please select conditions for the search.
+advanceQuery.userAlreadyLoggedIn=<li><font color="red">You are logged in to caTissue Core with the same user account from two different browsers or machines. caTissue Core does not support using Advanced search from two such sessions. Please log off from one of the session and retry the Query.
+error.specimenId.add Please add specimen Identifier to view to add specimen to cart.
 #-- Query Search Result Keys --
 
 page.dateFormat [MM-DD-YYYY]
