--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1551,6 +1551,7 @@ page.dateFormat [MM-DD-YYYY]
 home.text.bullet1 caTissue Core is a web based informatics system that keeps track of multiple specimens from the participant, tracks refined materials (RNA, DNA, Protein) that are used for molecular analysis, and annotate biospecimens with accumulating experimental data, as they are successively used for clinical correlative studies.
 home.text.bullet2 caTissue Core also helps in reducing the evolving functional complexity of the biospecimen banks in collecting, processing, storing, and distribution of human specimens for correlative scientific cancer research.
 error.object.closed is already marked as closed.
+error.object.disabled is already marked as disabled.
 
 #-- Query Rule Keys --
 participant.queryRule=Participant Query Rule
@@ -1763,7 +1764,7 @@ specimenArrayAliquots.summaryTitle=Specimen Array Aliquot Creation Summary
 errors.specimenArrayAliquots.reSubmit=You have to resubmit the page in case you edit any of Parent SpecimenArray Label/Barcode or Aliquot Count.
 errors.specimenArrayAliquots.locationsNotSufficient=System can not create aliquots of Specimen Array at this time due to insufficent number of Storage locations.
 errors.specimenArrayAliquots.notExists=SpecimenArray with given {0} does not exist.
-
+errors.specimenArrayAliquots.disabled={0} is already marked as disabled.
 
 #Similar Containers keys
 similarcontainers.createTitle=Create Similar Containers
