Added message keys for Shipping N Tracking.
SVN-Revision: 15464

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1766,6 +1766,7 @@ errors.specimenArrayAliquots.locationsNotSufficient=System can not create aliquo
 errors.specimenArrayAliquots.notExists=SpecimenArray with given {0} does not exist.
 errors.specimenArrayAliquots.disabled={0} is already marked as disabled.
 
+
 #Similar Containers keys
 similarcontainers.createTitle=Create Similar Containers
 similarcontainers.title=SIMILAR CONTAINERS
@@ -2026,9 +2027,9 @@ access.view.action.denied = Access denied ! User does not have privilege to view
 #-- Keys for labels on pages
 
 shipment.details=Shipment Details
-shipemntRequest.details=Shipment Request details
+shipemntRequest.details=Shipment Request Details
 shipment.sendOn=Send On
-shipment.sendDate=Send Date
+shipment.sendDate=Shipping Time
 shipment.label=Label
 shipment.barcode=Barcode
 shipment.receiverSite=Receiver's Site
@@ -2076,12 +2077,16 @@ domain.shipment=Shipment
 domain.shipment.request=ShipmentRequest
 
 #-- For UI screen messages --
-dashboard.requestreceived=Requests Received
-dashboard.shipmentreceived=Shipments Received
+dashboard.requestreceived=Incoming Shipment Requests
+dashboard.requestreceived.explanation=(Shipment requests to my site(s).)
+dashboard.shipmentreceived=Incoming Shipments
+dashboard.shipmentreceived.explanation=(Shipments coming to my site(s).)
 dashboard.outgoingShipments=Outgoing Shipments
+dashboard.outgoingShipments.explanation=(Shipments being sent from my site(s).)
 dashboard.shipments=Shipments
 dashboard.shipmentRequests=Shipment Requests
-dashboard.requestsSent=My Requests
+dashboard.requestsSent=Outgoing Shipment Requests
+dashboard.requestsSent.explanation=(Shipment Requests sent from my site(s).)
 requestreceived.newrequests=New Requests
 shipmentreceived.newintransit=New In Transit
 outgoingmessage=New In Transit
@@ -2121,3 +2126,11 @@ outgoing.shipmentRequestList.empty=No outgoing shipment requests are in queue
 dashboard.recordsPerPage=Records Per Page
 buttons.viewDashboard=View Dashboard
 buttons.print=Print
+
+#-- For Page title
+dashboard.name=Dashboard
+shipment.name=Shipment
+shipmentRequest.name=Shipment Request
+
+#-- For Receive Shipment page
+errors.locations.notSufficient.shipmentReceive=System can not allocate storage locations to {0} at this time due to insufficent number of storage locations.
