change in an error message
SVN-Revision: 15474

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2018,7 +2018,8 @@ user.roleIsRequired = Role
 user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
 user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
 cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
-cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
+#cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
+cp.siteIsRequired =  Error: Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
 user.roleNotFound = Access denied ! User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
 access.view.action.denied = Access denied ! User does not have privilege to view this information.
