--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2135,3 +2135,4 @@ shipmentRequest.name=Shipment Request
 
 #-- For Receive Shipment page
 errors.locations.notSufficient.shipmentReceive=System can not allocate storage locations to {0} at this time due to insufficent number of storage locations.
+aliquots.derivedCount = Derivative count
