Changes for Bug 9345.
SVN-Revision: 15566

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -758,7 +758,7 @@ buttons.reset=Reset
 buttons.approve=Approve
 buttons.reject=Reject
 buttons.submit=Submit
-buttons.addPrivileges=Add Privilege
+buttons.addPrivileges=Save Privilege
 buttons.close=Close
 buttons.pending=Pending
 buttons.edit=Edit
