password message change
SVN-Revision: 15567

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1617,7 +1617,7 @@ datetime=Date/Time
 proceedWith=Proceed To
 
 #-- Errors for Password Validation begin--
-errors.newPassword.length=Password should be at least 6 characters. Please enter the password again.
+errors.newPassword.length=Password should be at least {0} characters. Please enter the password again.
 errors.newPassword.sameAsUserName=Password should not be same as User/Login name.
 errors.newPassword.sameAsOld=New Password should be different than Old Password.
 errors.newPassword.pattern=New password must include at least one upper case letter, one lower case letter and a number. The password can not contain spaces.
@@ -1626,7 +1626,8 @@ errors.newPassword.genericmessage=Error occurred in Password change Operation. P
 errors.newPassword.sameAsLastn=New Password should be different than last {0} Passwords.
 errors.changePassword.changeFirstLogin=You have to change your password as you are logging in for the first time.
 errors.changePassword.expire=Your Password has been expired, Please change the password.
-errors.changePassword.afterSomeDays=Password can not be changed more than once in a day.
+errors.changePassword.sameDay=Password can not be changed more than once in a day.
+errors.changePassword.afterSomeDays = Password can not be changed more than once within {0} days.
 errors.changePassword.sameAsNameSurnameEmail=New Password should not contain name, surname or email address.
 #errors.newPassword.containFirstName=Password contains First Name. Please Re-type the password.
 #-- Errors for Password Validation end--
