--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1441,7 +1441,7 @@ distribution.distributedItem=Distributed Item(s)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
-errors.distribution.quantity.should.equal Quantity of ordered specimen should be equal to it's available quantity.
+errors.distribution.quantity.should.equal Quantity of ordered specimen should be equal to its available quantity.
 errors.distribution.derivedspecimen.type.class Ordered specimen class and type should be same as requested class and type.
 errors.distribution.aliquots.created Aliquot(s) created for specimen {0}
 distribution.distributionType=Distributed Item
