added new appenders for test cases.
SVN-Revision: 15660

--- a/caTissueSuite_dbunit/src/log4j.properties
+++ b/caTissueSuite_dbunit/src/log4j.properties
@@ -15,11 +15,22 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d{HH:mm:ss,SSS} (%C{1}) - %
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.File=catissue.log
 log4j.appender.LOGFILE.Append=true
-log4j.appender.HIBERNATE.MaxFileSize=1024KB
-log4j.appender.HIBERNATE.MaxBackupIndex=7
+log4j.appender.LOGFILE.MaxFileSize=1024KB
+log4j.appender.LOGFILE.MaxBackupIndex=7
 log4j.appender.LOGFILE.Threshold=INFO
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%-4r %d [%t] %-5p %C{3} - %m%n
+
+# TESTLOGFILE is set to be a File appender using a PatternLayout.
+log4j.appender.TESTLOGFILE=org.apache.log4j.RollingFileAppender
+log4j.appender.TESTLOGFILE.File=testcasescatissue.log
+log4j.appender.TESTLOGFILE.Append=true
+log4j.appender.TESTLOGFILE.MaxFileSize=1024KB
+log4j.appender.TESTLOGFILE.MaxBackupIndex=7
+log4j.appender.TESTLOGFILE.Threshold=INFO
+log4j.appender.TESTLOGFILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.TESTLOGFILE.layout.ConversionPattern=%-4r %d [%t] %-5p %C{3} - %m%n
+
 # LOGFILE for all hibernate logs
 log4j.appender.HIBERNATE=org.apache.log4j.RollingFileAppender
 log4j.appender.HIBERNATE.File=hibernatesql.log
@@ -34,6 +45,6 @@ log4j.appender.HIBERNATE.layout.ConversionPattern= %-5p %d %c - %m%n
 log4j.logger.org.hibernate=info,HIBERNATE
 log4j.logger.edu.wustl.catissuecore=info, LOGFILE
 log4j.logger.edu.wustl.common=info, LOGFILE
-
+log4j.logger.edu.wustl.catissuecore.dbunit=info, TESTLOGFILE
 ### log just the SQL
 # log4j.logger.org.hibernate.SQL=debug,HIBERNATE
